--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   flutter_soloud: ^3.1.10
   confetti: ^0.7.0
   rename_app: ^1.6.3
+  intl: ^0.18.1
+  fluttertoast:
+  phonepe_payment_sdk: ^2.0.2
+  crypto: ^3.0.3
+  http: ^1.1.0
   change_app_package_name: ^1.5.0
   shared_preferences: ^2.2.1
   flutter_screenutil: ^5.9.3
