--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,22 +51,46 @@ android {
         versionName = "1.0"
         multiDexEnabled = true
     }
+//    signingConfigs {
+//        release{
+//            keyAlias keystoreProperties['keyAlias']
+//            keyPassword keystoreProperties['keyPassword']
+//            storeFile file(keystoreProperties['storeFile'])
+//            storePassword keystoreProperties['storePassword']
+//        }
+//    }
+//    buildTypes {
+//        release {
+//            // TODO: Add your own signing config for the release build.
+//            // Signing with the debug keys for now, so `flutter run --release` works.
+////            signingConfig = signingConfigs.debug
+//            signingConfig signingConfigs.release
+//        }
+//    }
     signingConfigs {
-        release{
+        release {
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
             storeFile file(keystoreProperties['storeFile'])
             storePassword keystoreProperties['storePassword']
         }
+        debug {
+            keyAlias keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
+            storeFile file('../xoxo.jks')
+            storePassword keystoreProperties['storePassword']
+        }
     }
+
     buildTypes {
+        debug {
+            signingConfig signingConfigs.debug
+        }
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-//            signingConfig = signingConfigs.debug
             signingConfig signingConfigs.release
         }
     }
+
 }
 
 flutter {
