--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   google_sign_in: ^6.3.0
   flutter_soloud: ^3.1.10
   confetti: ^0.7.0
+  google_mobile_ads: ^5.2.0
   rename_app: ^1.6.3
+  connectivity_plus: ^6.0.5
   intl: ^0.18.1
 #  fluttertoast:
 
